--- a/in-browser-transpiling/public/test.html
+++ b/in-browser-transpiling/public/test.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+<html>
+  <head></head>
   <body>
-    Hello this is the test.html
+    <h1>Hi there</h1>
   </body>
 </html>
